<resources>
    <string name="app_name">SaudeBucal</string>
    <string name="app_version">1.0.0.6</string>
    <string name="title_activity_reminder">Aprenda mais sobre saúde bucal.</string>
    <string name="slide_down">Veja mais</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_contact">Contato</string>
    <string name="name">Nome:</string>
    <string name="initial_date">Data inicial:</string>
    <string name="phone">Telefone:</string>
    <string name="save">Salvar</string>
    <string name="name_error">Campo \'Nome\' deve ser preenchido</string>
    <string name="phone_error">Campo \'Telefone\' deve ser preenchido</string>
    <string name="initial_date_error">Campo \'Data Inicial\' deve ser preenchido</string>
    <string name="initial_date_invalid">Campo \'Data Inicial\' inválida</string>
    <string name="initial_date_after_now">A \'Data Inicial\' deve ser posterior a atual</string>
    <string name="success">Operação realizada com sucesso!</string>
    <string name="contact_required">É necessário o cadastro de um contato</string>
    <string name="title_activity_about">About</string>
    <string name="history_empty_message">Você ainda não recebeu nenhuma dica.</string>
    <string name="tip1">Dica 1</string>
    <string name="tip1_text1">Bem vindo ao App APRENDA MAIS SOBRE SAÚDE BUCAL!</string>
    <string name="tip1_text2">Você vai receber duas dicas por dia durante um mês, esperamos que você possa aprender e melhorar cada vez mais os cuidados com a sua saúde bucal!</string>
    <string name="tip2">Dica 2</string>
    <string name="tip2_text1">Boa noite!! Um sorriso bonito e saudável é resultado de uma boa higienização bucal. Escovar os dentes, passar fio dental e sorrir fazem parte de uma vida saudável.</string>
    <string name="tip3">Dica 3</string>
    <string name="tip3_text1">Você lembra o que é a placa bacteriana??</string>
    <string name="tip3_text2">Ela causa uma inflamação e sangramento na gengiva. Como o sangramento desta imagem:</string>
    <string name="tip4">Dica 4</string>
    <string name="tip4_text1">Vamos ver juntos um breve vídeo:</string>
    <string name="tip5">Dica 5</string>
    <string name="tip5_text1">A placa bacteriana causa a gengivite, que é o estágio inicial da doença da gengiva. Para prevenir basta escovar os dentes e usar o fio dental.</string>
    <string name="tip6">Dica 6</string>
    <string name="tip6_text1">Vamos ver juntos um breve vídeo:</string>
    <string name="tip7">Dica 7</string>
    <string name="tip7_text1">Quem possui problema na posição dos dentes (dentes tortos) tem mais chance de ter doenças gengivais.</string>
    <string name="tip7_text2">Sabe por quê? Vamos descobrir juntos na próxima notificação?...</string>
    <string name="tip8">Dica 8</string>
    <string name="tip8_text1">Nesses casos é mais difícil limpar os dentes e aumenta o acumulo de placa bacteriana! Redobre os cuidados na escovação e no uso de fio dental!</string>
    <string name="tip9">Dica 9</string>
    <string name="tip9_text1">O uso de aparelho ortodôntico também pode aumentar as chances de ter problemas na gengiva.</string>
    <string name="tip10">Dica 10</string>
    <string name="tip10_text1">Vamos ver juntos um breve vídeo</string>
    <string name="tip11">Dica 11</string>
    <string name="tip11_text1">Você não vê, mas entre os dentes ficam restos de comida e placa bacteriana. Eles podem gerar doenças! Para prevenir use o fio dental todos os dias!!</string>
    <string name="tip12">Dica 12</string>
    <string name="tip12_text1">Vamos ver juntos um breve vídeo?</string>
    <string name="tip13">Dica 13</string>
    <string name="tip13_text1">Alimentos mais duros e consistentes não causam sangramento gengival. O sangramento é causado pela inflamação gengival.</string>
    <string name="tip14">Dica 14</string>
    <string name="tip14_text1">Vamos ver juntos um breve vídeo</string>
    <string name="tip15">Dica 15</string>
    <string name="tip15_text1">Lembra da placa bacteriana? Se ela não for removida ela calcifica e forma o cálculo também conhecido como tártaro que se adere muito firmemente ao dente e só o dentista consegue remover.</string>
    <string name="tip16">Dica 16</string>
    <string name="tip16_text1">Somente o dentista consegue remover o cálculo/tártaro. Procure um dentista regularmente!</string>
    <string name="tip17">Dica 17</string>
    <string name="tip17_text1">O bochecho com enxaguantes bucais não dispensa o uso da escova e do fio dental! Sabe por quê? Porque somente a escova e o fio dental removem a placa bacteriana!</string>
    <string name="tip18">Dica 18</string>
    <string name="tip18_text1">Vamos ver juntos um breve vídeo:</string>
    <string name="tip19">Dica 19</string>
    <string name="tip19_text1">Você sabia que problemas nos dentes e no periodonto podem afetar outras partes do corpo? Como o coração? Sorrir faz bem para a alma! E cuidar da saúde bucal é muito importante para a saúde do corpo!</string>
    <string name="tip20">Dica 20</string>
    <string name="tip20_text1">Vamos ver juntos um breve vídeo</string>
    <string name="tip21">Dica 21</string>
    <string name="tip21_text1">Você já teve mau hálito? Você já pensou que isso pode afastar as pessoas de você? Cuide da sua saúde bucal!</string>
    <string name="tip22">Dica 22</string>
    <string name="tip22_text1">Vamos ver juntos um breve vídeo</string>
    <string name="tip23">Dica 23</string>
    <string name="tip23_text1">Você lembra dos estágios da doença da gengiva? Gengiva saudável \u2192 Placa Bacteriana \u2192 Gengivite \u2192 Periodontite</string>
    <string name="tip23_text2">Evite doenças na gengiva! Cuide do seu hálito, seus dentes e de seu sorriso!</string>
    <string name="tip24">Dica 24</string>
    <string name="tip24_text1">Vamos ver juntos um breve vídeo</string>
    <string name="tip25">Dica 25</string>
    <string name="tip25_text1">Sabe as etapas da doença da gengiva que vimos ontem? Lembra da periodontite? Esse é o pior estágio, nele você pode até PERDER OS DENTES!</string>
    <string name="tip25_text2">Não deixe isso acontecer! Escove os dentes e use o fio dental! É rápido e muito eficiente!</string>
    <string name="tip26">Dica 26</string>
    <string name="tip26_text1">Vamos ver juntos um breve vídeo</string>
    <string name="tip27">Dica 27</string>
    <string name="tip27_text1">Que fumar faz mal todos sabem, mas você sabia que quem fuma tem mais chance de ter problemas na gengiva?</string>
    <string name="tip27_text2">Fumo e sorriso não combinam!</string>
    <string name="tip28">Dica 28</string>
    <string name="tip28_text1">Vamos ver juntos um breve vídeo</string>
    <string name="tip29">Dica 29</string>
    <string name="tip29_text1">Hoje vamos disponibilizar pra você alguns links uteis:</string>
    <string name="tip29_text2">Neste link você pode procurar qual unidade de saúde com dentista está mais próxima da sua casa e qual atendimento 24 horas está mais próximo de você: http://goo.gl/3nskof</string>
    <string name="tip29_text3">Neste link você vai poder visualizar um vídeo de como realizar uma correta higienização dos dentes: https://youtu.be/9EPoszQiCSA</string>
    <string name="tip30">Dica 30</string>
    <string name="tip30_text1">Você sabe o que devemos fazer com a placa bacteriana??</string>
    <string name="tip30_text2">Escova e fio dental nela!!</string>
    <string name="tip31">Dica 31</string>
    <string name="tip31_text1">Vamos ver juntos um breve vídeo:</string>
    <string name="tip32">Dica 32</string>
    <string name="tip32_text1">O acumulo de placa bacteriana é o principal fator relacionado com a gengivite. Não permita que esta doença se instale na sua boca!</string>
    <string name="tip33">Dica 33</string>
    <string name="tip33_text1">Vamos ver juntos um breve vídeo:</string>
    <string name="tip34">Dica 34</string>
    <string name="tip34_text1">Quem possui problema na posição dos dentes (dentes tortos) tem mais chance de ter doenças gengivais.</string>
    <string name="tip34_text2">Sabe por quê? Nesses casos a higiene bucal é mais difícil, por isso necessita de um cuidado maior.</string>
    <string name="tip35">Dica 35</string>
    <string name="tip35_text1">Nesses casos é mais difícil limpar os dentes e aumenta o acumulo de placa bacteriana! Redobre os cuidados na escovação e no uso de fio dental!</string>
    <string name="tip36">Dica 36</string>
    <string name="tip36_text1">O aparelho dificulta a limpeza dos dentes e o acumulo de placa bacteriana.</string>
    <string name="tip36_text2">Se você usa aparelho tem que caprichar bastante da escovação e do uso do fio dental.</string>
    <string name="tip37">Dica 37</string>
    <string name="tip37_text1">Vamos ver juntos um breve vídeo:</string>
    <string name="tip38">Dica 38</string>
    <string name="tip38_text1">A higiene só é completa se além da escovação dentária, você também utilizar o fio dental! Cuide do que é seu! Cuide do seu Sorriso :D</string>
    <string name="tip39">Dica 39</string>
    <string name="tip39_text1">Vamos ver juntos um breve vídeo:</string>
    <string name="tip40">Dica 40</string>
    <string name="tip40_text1">O sangramento gengival não possui nenhuma relação com a ingestão de alimentos mais rígidos e consistentes.</string>
    <string name="tip41">Dica 41</string>
    <string name="tip41_text1">Vamos ver juntos um breve vídeo:</string>
    <string name="tip42">Dica 42</string>
    <string name="tip42_text1">Somente o dentista consegue remover o cálculo/tártaro. Procure um dentista regularmente!</string>
    <string name="tip43">Dica 43</string>
    <string name="tip43_text1">Boa noite :) Não deixe formar cálculo/tártaro em seus dentes!! Higienize os dentes antes de dormir!</string>
    <string name="tip44">Dica 44</string>
    <string name="tip44_text1">Você gosta de utilizar enxaguante bucal? Lembre-se que se você utilizar o enxaguante deve sempre escovar os dentes e usar o fio dental.</string>
    <string name="tip45">Dica 45</string>
    <string name="tip45_text1">Vamos ver juntos um breve vídeo:</string>
    <string name="tip46">Dica 46</string>
    <string name="tip46_text1">Lembre-se: escovar os dentes e utilizar o fio dental além de prevenir problemas na boca ajuda a prevenir problemas sistêmicos.</string>
    <string name="tip47">Dica 47</string>
    <string name="tip47_text1">Vamos ver juntos um breve vídeo:</string>
    <string name="tip48">Dica 48</string>
    <string name="tip48_text1">O mau hálito pode ter diversas origens, uma delas é problemas na gengiva e no periodonto! Limpe corretamente a língua e os dentes!</string>
    <string name="tip49">Dica 49</string>
    <string name="tip49_text1">Você sabia que problemas na gengiva e no periodonto podem causar mau hálito? Vamos prevenir? Escove corretamente os dentes e use o fio dental.</string>
    <string name="tip50">Dica 50</string>
    <string name="tip50_text1">Você já sentiu seus dentes amolecidos? Quando a gengiva e o periodonto estão doentes, os dentes podem ter mobilidade.</string>
    <string name="tip51">Dica 51</string>
    <string name="tip51_text1">Você já pensou que pode perder os dentes somente porque não escova os dentes direito? Sim, problemas na gengiva e periodonto podem amolecer seus dentes.</string>
    <string name="tip52">Dica 52</string>
    <string name="tip52_text1">Você pode perder os dentes se tiver problemas na gengiva e no periodonto. Cuide da sua saúde bucal! Previnase!</string>
    <string name="tip53">Dica 53</string>
    <string name="tip53_text1">Vamos ver juntos um breve vídeo:</string>
    <string name="tip54">Dica 54</string>
    <string name="tip54_text1">Quem fuma tem maior possibilidade de ter doença na gengiva.</string>
    <string name="tip55">Dica 55</string>
    <string name="your_data">Seus Dados</string>
    <string name="history_tips">Dicas recebidas:</string>
</resources>